@@ -1,0 +1,10 @@
+junit_tests(
+  sources=globs('*.scala'), 
+  dependencies=[
+    '3rdparty/jvm/org/scalatest',
+    'util/util-core',
+    'util/util-intellij/src/main/resources',
+  ],
+  fatal_warnings = True,
+  strict_deps = True,
+)
